# data-quality-env

./: Dockerfile  HF_SPACE_DEPLOY.md  Makefile  PROMPT_KIT.md  README.md  SQL_AGENT_MIND.md  chat_agent.py  high_grade_agent.py  inference.py  openenv-validate.txt  openenv.yaml  pyproject.toml  requirements.txt  run_env_server.sh  run_high_grade_agent.sh  space_app.py  validate-submission.sh
data_quality_env.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
env/: __init__.py  agent_memory.py  algorithm_bank.py  algorithm_portfolio.py  app.py  dataset_gen.py  engine.py  inprocess_backend.py  knowledge_brain.py  models.py  multi_agent_orchestrator.py  reasoning_stack.py  sql_brain.py  state.py
outputs/: agent_memory.json  deep_eval_summary.json  rl_policy.json
scripts/: check_100k_algorithms.py  check_graders.py  deep_evaluate_agent.py  local_qa.py  qa_accuracy_check.py  self_improve_loop.py  smoke_test.py  train_rl_agent.py
server/: app.py
tasks/: __init__.py  base.py  task1_nulls.py  task2_schema.py  task3_drift.py  task4_relational.py
